fix: remove parallax img on mobile

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -5,7 +5,7 @@
 @layer components {
   .section {
     @apply max-w-6xl mx-auto border bg-white;
-    margin: 1.5rem;
+    margin: 2rem 1.5rem;
     padding: 2rem 1rem;
     border-radius: 10px;
 
